# lanc

cyber-trust-experiment/: Cargo.toml  INTERVIEW_RESPONSE.md  README.md  RESEARCH_PROPOSAL.md
cyber-trust-experiment/scripts/: simulate-insider-threat.sh  simulate-supply-chain.sh  start-experiment.sh
cyber-trust-experiment/src/: main.rs
cyber-trust-experiment/static/: dashboard.html
distributed-security-experiment/: Cargo.toml  EXPERIMENT_SUMMARY.md  README.md
exp1/: EXPERIMENT_SUMMARY.md  README.md  RESEARCH_PROPOSAL.md
exp2/: Cargo.toml  INTERVIEW_GUIDE.md  sculi-trust-monitor.service
exp2/examples/: wasm-service.wat
exp2/scripts/: run-demo.sh  start-web.sh
exp2/web/: test.html
sculi-trust-demo/: DEMO_SUMMARY.md  README.md
trust-monitor-demo/: ARCHITECTURE.md  Cargo.toml  DEMO_GUIDE.md  INTERVIEW_PRESENTATION.md  INTERVIEW_RESPONSE.md  README.md  RESEARCH_FRAMEWORK.md  RESEARCH_PROPOSAL.md  test-demo.sh
trust-monitor-demo/scripts/: simulate-compromise.sh  start-demo.sh
trust-monitor-demo/src/: main.rs
trust-monitor-demo/static/: dashboard.html
trust-monitoring-system/: Cargo.toml  INTERVIEW_PREPARATION.md  README.md  SYSTEM_SUMMARY.md
trust-monitoring-system/config/: system.yaml
trust-monitoring-system/docs/: SCULI_ALIGNMENT.md
trust-monitoring-system/examples/: demo_scenario.rs
trust-monitoring-system/scripts/: .env  demo.sh  run-demo.sh  setup.sh  trust-monitoring.service
trust-monitoring-system/scripts/config/: grafana-dashboard.json
trust-monitoring-system/scripts/examples/: deployment.yaml
trust-monitoring-system/src/: main.rs  simple_main.rs
trust-monitoring-system/src/core/: composition_engine.rs  continual_assurance_engine.rs  incident_response_engine.rs  mod.rs  predictability_engine.rs
(+15 files in other folders)
