[package]
name = "trust-monitoring-system"
version = "0.1.0"
edition = "2021"
authors = ["Trust Monitoring Team"]
description = "SCULI-aligned trust monitoring system for large distributed systems"
license = "MIT"

[[bin]]
name = "trust-monitoring-system"
path = "src/simple_main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
warp = "0.3"

[dev-dependencies]
tokio-test = "0.4"
